--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -303,9 +303,9 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            NO DISPONIBLE</h4>
+                            ENTREGABLE 5</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            NO DISPONIBLE
+                            Descripción y bocetos (dibujo a mano alzada) de 03 conceptos de solución.
                         </p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="ENTREGABLE-5.html" class="btn btn-primary display-4">
