--- a/ENTREGABLE-6.html
+++ b/ENTREGABLE-6.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
 
     
 
@@ -524,14 +524,14 @@
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-12">
                 <div class="sketchfab-embed-wrapper">
-    <iframe title="A 3D model" width="640" height="480" src="https://sketchfab.com/models/2202633f81e24888bdb3d87ce1fc2891/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <iframe title="A 3D model" width="1060" height="670" src="https://sketchfab.com/models/2202633f81e24888bdb3d87ce1fc2891/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
-<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-    <a href="https://sketchfab.com/3d-models/ensamblaje-final-2202633f81e24888bdb3d87ce1fc2891?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Ensamblaje Final</a>
-    by <a href="https://sketchfab.com/D4ny2000?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">D4ny2000</a>
-    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-</p>
-</div>
+              <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+                  <a href="https://sketchfab.com/3d-models/ensamblaje-final-2202633f81e24888bdb3d87ce1fc2891?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Ensamblaje Final</a>
+                  by <a href="https://sketchfab.com/D4ny2000?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">D4ny2000</a>
+                  on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+              </p>
+              </div>
             </div>
         </div>
     </div>
